# subnet

./: .dockerignore  .env.example  .gitignore  Dockerfile.miner  Dockerfile.platform  Dockerfile.validator  Dockerfile.w3_engine  README.md  TODO.md  challenge_example.json  check_bt.py  check_weights.py  docker-compose.yml  platform.db  pyproject.toml  requirements.txt  setup.py
docs/: openapi.json
docs/superpowers/plans/: 2026-03-15-challenge-synapse.md  2026-03-15-miner-engine.md  2026-03-15-validator-query-strategy.md  2026-03-15-validator-scoring-rewards.md  2026-03-19-consolidated-neuron-plan.md  (+6 more)
engines/w3/: go.mod  go.sum
neurons/: challenge_example.json  miner.py  validator.py
neurons/miner/: engine.py  miner.py
neurons/validator/: defense.py  reward.py  validator.py
platform_service/: README.md  config.py  database.py  dispatcher.py  main.py  mempool.py
references/ridges_validator/: config.py  main.py
scripts/: generate_openapi.py  setup_local.sh
template/: __init__.py  mock.py  protocol.py
template/api/: dummy.py
template/base/: miner.py  neuron.py  validator.py
template/engine/: base.py  mock.py
template/utils/: config.py
template/validator/: forward.py  reward.py
tests/: helpers.py  test_miner.py  test_protocol.py  test_reward_logic.py  test_template_validator.py  test_validator_forward.py  test_validator_state.py
tests/engine/: test_mock_engine.py
tests/platform_service/: test_api.py  test_cors.py  test_db_models.py  test_schemas.py
tests/validator/: test_defense.py  test_defense_actions.py  test_parallel_processing.py
(+18 files in other folders)
