[project]
name = "bitdefense"
version = "0.1.0"
description = "Decentralized, permissionless security protocol providing real-time on-chain analysis, detection and invariants monitoring."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Aleksei Gubin" }
]
dependencies = [
    "bittensor>=10.0.0",
    "starlette>=0.30.0",
    "pydantic>=2",
    "rich>=13",
    "pytest>=8",
    "torch>=2",
    "numpy>=2.0.1",
    "setuptools>=68",
    "web3>=7",
    "fastapi>=0.135.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["template", "neurons", "platform_service"]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
]
